--- a/src/app/pages/historiales-medicos/edit/edit.component.html
+++ b/src/app/pages/historiales-medicos/edit/edit.component.html
@@ -16,7 +16,7 @@
                                     </div>
                                 </div>
                                 <div class="pb-3">
-                                    <img src="https://this-person-does-not-exist.com/img/avatar-genf189e94d9a642cc64ebc1e46a2f6ea1d.jpg" alt="..." class="img-thumbnail mx-auto d-block">
+                                    <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="..." class="img-thumbnail mx-auto d-block">
                                 </div>
                                 <div class="form-group">
                                     <label for="nick">Nickname</label>
