--- a/src/app/pages/requisiciones/index/index.component.html
+++ b/src/app/pages/requisiciones/index/index.component.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
-                        <a class="btn btn-success btn-block  my-2" routerLink=""><i class="fas fa-plus"></i> Solicitar insumo</a>
+                        <a class="btn btn-sm btn-pink btn-block my-2" routerLink=""><i class="fas fa-plus"></i> Solicitar insumo</a>
                     </div>
                 </div>   
             </div>
@@ -48,17 +48,17 @@
                             En espera
                         </td>
                         <td width="10px">
-                            <button href="#" class="btn btn-info">
+                            <button href="#" class="btn btn-sm btn-secondary">
                                 <i class="fas fa-eye text-white"></i>
                             </button>
                         </td>
                         <td width="10px">
-                            <button href="#" class="btn btn-primary">
+                            <button href="#" class="btn btn-sm btn-primary">
                                 <i class="fas fa-edit"></i>
                             </button>
                         </td>
                         <td width="10px">
-                            <button href="#" class="btn btn-danger">
+                            <button href="#" class="btn btn-sm btn-danger">
                                 <i class="fas fa-trash"></i>
                             </button>
                         </td>
