--- a/src/app/pages/historiales-medicos/create/create.component.html
+++ b/src/app/pages/historiales-medicos/create/create.component.html
@@ -5,18 +5,18 @@
                 <h3 class="card-title text-center">Crear historial médico</h3>
             </div>
             <div class="card-body">
-                <!-- <form [formGroup]="form" (submit)="guardar()"> -->
+                <form [formGroup]="historialMedicoForm" (submit)="guardar()">
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <div class="border rounded bg-light p-3 h-100">
                                 <div class="form-group">
                                     <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="imagen" required>
+                                        <input type="file" class="custom-file-input" id="imagen" required (change)="onFileSelected($event)">
                                         <label class="custom-file-label">Fotografía</label>
                                     </div>
                                 </div>
                                 <div class="pb-3">
-                                    <img src="https://this-person-does-not-exist.com/img/avatar-genf189e94d9a642cc64ebc1e46a2f6ea1d.jpg" alt="..." class="img-thumbnail mx-auto d-block">
+                                    <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="..." class="img-thumbnail mx-auto d-block">
                                 </div>
                                 <div class="form-group">
                                     <label for="nick">Nickname</label>
@@ -101,7 +101,7 @@
                             <button class="btn btn-pink">Guardar</button>
                         </div>
                     </div>
-                <!-- </form> -->
+                </form>
             </div>
         </div>
     </div>
