--- a/src/app/pages/historiales-medicos/index/index.component.html
+++ b/src/app/pages/historiales-medicos/index/index.component.html
@@ -9,45 +9,60 @@
                 </a> -->
             </div>
             </div>
+            <div class="card-header border-0">
+                <div class="row">
+                    <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
+                        <div class="input-group my-2">
+                            <div class="input-group-prepend">
+                              <div class="input-group-text"><i class="fas fa-search"></i></div>
+                            </div>
+                            <input wire:model="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del paciente">
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
+                        <a class="btn btn-sm btn-pink btn-block  my-2" routerLink="/enfermeria/historiales-medicos/create"><i class="fas fa-plus"></i> Dar alta</a>
+                    </div>
+                </div>   
+            </div>
             <div class="card-body table-responsive p-0">
-            <table class="table table-striped table-valign-middle">
-                <thead>
-                <tr class="text-center">
-                    <th>Paciente</th>
-                    <th>Tipo de paciente</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody *ngFor="let historial of historialesMedicos">
-                    <tr>
-                        <td>
-                            <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
-                            {{ historial.pacientable?.nombre }} {{ historial.pacientable?.paterno }}
-                        </td>
-                        <td [ngSwitch]="historial.pacientable_type" class="text-center">
-                            (<small *ngSwitchCase="'App\\Models\\NomEmpleado'">Empleado</small>
-                            <small *ngSwitchCase="'App\\Models\\Externo'">Externo</small>)
-                        </td>
-                        <td width="10px">
-                            <button (click)="showHistorialMedico(historial.id)" class="btn btn-sm btn-default">
-                                <i class="fas fa-eye"></i>
-                            </button>
-                        </td>
-                        <td width="10px">
-                            <button (click)="editHistorialMedico(historial.id)" class="btn btn-sm btn-primary">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                        </td>
-                        <td width="10px">
-                            <button href="#" class="btn btn-sm btn-danger">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                        </td>
+                <table class="table table-striped table-valign-middle">
+                    <thead>
+                    <tr class="text-center">
+                        <th>Paciente</th>
+                        <th>Tipo de paciente</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
                     </tr>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody *ngFor="let historial of historialesMedicos">
+                        <tr>
+                            <td>
+                                <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
+                                {{ historial.pacientable?.nombre }} {{ historial.pacientable?.paterno }}
+                            </td>
+                            <td [ngSwitch]="historial.pacientable_type" class="text-center">
+                                (<small *ngSwitchCase="'App\\Models\\NomEmpleado'">Empleado</small>
+                                <small *ngSwitchCase="'App\\Models\\Externo'">Externo</small>)
+                            </td>
+                            <td width="10px">
+                                <button (click)="showHistorialMedico(historial.id)" class="btn btn-sm btn-secondary">
+                                    <i class="fas fa-eye"></i>
+                                </button>
+                            </td>
+                            <td width="10px">
+                                <button (click)="editHistorialMedico(historial.id)" class="btn btn-sm btn-primary">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center">
