--- a/src/app/pages/calendario/index/index.component.html
+++ b/src/app/pages/calendario/index/index.component.html
@@ -16,12 +16,8 @@
   </div>
 </div>
 
-<app-date-modal [selectedDate]="selectedDate" [relatedEvents]="relatedEvents"></app-date-modal>
-
-<div class="modal" id="eventModal" tabindex="-1" role="dialog">
+<div class="modal" id="dateModal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
-    <div #eventosColapsados class="modal-content">
-      <app-event-modal [event]="selectedEvent"></app-event-modal>
-    </div>
+    <app-date-modal [selectedDate]="selectedDate" [relatedEvents]="relatedEvents"></app-date-modal>
   </div>
 </div>
