--- a/src/app/pages/consultas/index/index.component.html
+++ b/src/app/pages/consultas/index/index.component.html
@@ -26,7 +26,7 @@
                   <th></th>
                 </tr>
                 </thead>
-                <tbody *ngFor="let consulta of consultas">
+                <tbody *ngFor="let consulta of consultas | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                     <tr>
                         <td>
                             <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
@@ -49,13 +49,18 @@
                             </button>
                         </td> -->
                         <td width="10px">
-                            <button href="#" class="btn btn-sm btn-danger">
+                            <button href="#" class="btn btn-sm btn-danger"  (click)="destroyConsulta(consulta.id)">
                                 <i class="fas fa-trash"></i>
                             </button>
                         </td>
                     </tr>
                 </tbody>
               </table>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-center">
+                    <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
+                </div>
             </div>
         </div>
     </div>
