--- a/src/app/pages/enfermeria/index/index.component.html
+++ b/src/app/pages/enfermeria/index/index.component.html
@@ -35,7 +35,7 @@
                 </ul>
             </div>                
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-header text-secondary border-0">
                 <h3 class="card-title text-center">Mi horario de atención</h3>
                 <div class="card-tools">
@@ -121,7 +121,7 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 
