--- a/src/app/pages/historiales-medicos/index/index.component.html
+++ b/src/app/pages/historiales-medicos/index/index.component.html
@@ -16,7 +16,7 @@
                             <div class="input-group-prepend">
                               <div class="input-group-text"><i class="fas fa-search"></i></div>
                             </div>
-                            <input wire:model="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del paciente">
+                            <input [(ngModel)]="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del paciente" (keyup)="buscarPaciente()">
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
@@ -35,7 +35,7 @@
                         <th></th>
                     </tr>
                     </thead>
-                    <tbody *ngFor="let historial of historialesMedicos">
+                    <tbody *ngFor="let historial of historialesMedicos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                         <tr>
                             <td>
                                 <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
@@ -66,7 +66,7 @@
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center">
-                   
+                    <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
                 </div>
             </div>
         </div>
