--- a/src/app/pages/historiales-medicos/index/index.component.html
+++ b/src/app/pages/historiales-medicos/index/index.component.html
@@ -35,8 +35,8 @@
                         <th></th>
                     </tr>
                     </thead>
-                    <tbody *ngFor="let historial of historialesMedicos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
-                        <tr>
+                    <tbody *ngIf="historialesMedicos.length > 0; else noHistoriales">
+                        <tr *ngFor="let historial of historialesMedicos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                             <td>
                                 <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
                                 {{ historial.pacientable?.nombre }} {{ historial.pacientable?.paterno }}
@@ -62,6 +62,11 @@
                             </td>
                         </tr>
                     </tbody>
+                    <ng-template #noHistoriales>
+                        <tr>
+                            <td colspan="5" class="text-center">Sin historiales médicos</td>
+                        </tr>
+                    </ng-template>
                 </table>
             </div>
             <div class="card-footer">
