--- a/src/app/pages/consultas/index/index.component.html
+++ b/src/app/pages/consultas/index/index.component.html
@@ -29,7 +29,7 @@
                 <tbody *ngFor="let consulta of consultas | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                     <tr>
                         <td>
-                            <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
+                            <!-- <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2"> -->
                             {{ consulta.pacientable?.nombre }} {{ consulta.pacientable?.paterno }}
                         </td>
                         <td>
