--- a/src/app/pages/historiales-medicos/show/show.component.html
+++ b/src/app/pages/historiales-medicos/show/show.component.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center">
-              <img src="../assets/dist/img/user2-160x160.jpg" alt="Admin" class="rounded-circle img-border"
+              <img [src]="image" alt="Admin" class="rounded-circle img-border"
                 width="150">
               <div class="mt-3 text-center">
                 <h4>
@@ -817,9 +817,9 @@
                               {{historialMedico?.antecedentes_personales_no_patologicos?.anticonceptivos}}
                             </div>
                           </div>
-                          <div *ngIf="historialMedico?.antecedentes_personales_no_patologicos?.anticonceptivos">
+                          <div *ngIf="historialMedico?.antecedentes_personales_no_patologicos?.espAnticonceptivos">
                             <div class="border rounded bg-white p-2">
-                              {{ historialMedico?.antecedentes_personales_no_patologicos?.anticonceptivos }}
+                              {{ historialMedico?.antecedentes_personales_no_patologicos?.espAnticonceptivos }}
                             </div>
                           </div>
                         </div>
@@ -1447,7 +1447,7 @@
                         <div class="py-2 border-bottom">
                           <div class="d-flex py-2">
                             <div>
-                              <b>Obecidad</b>
+                              <b>Obesidad</b>
                             </div>
                             <div class="ml-auto">
                               {{historialMedico?.antecedentes_heredofamiliares?.obecidad}}
@@ -1611,7 +1611,7 @@
                             </div>
                             <div class="ml-auto">
                               {{historialMedico?.antecedentes_heredofamiliares?.colagenopatias}}
-                            </div>
+                            </div>  
                           </div>
                           <div *ngIf="historialMedico?.antecedentes_heredofamiliares?.espColagenopatias">
                             <div class="border rounded bg-white p-2">
@@ -1744,7 +1744,7 @@
                         <div class="py-2 border-bottom">
                           <div class="d-flex py-2">
                             <div>
-                              <b>Obecidad</b>
+                              <b>Obesidad</b>
                             </div>
                             <div class="ml-auto">
                               <div class="form-check form-check-inline">
