--- a/src/app/spinner/spinner.component.css
+++ b/src/app/spinner/spinner.component.css
@@ -153,7 +153,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgb(255, 255, 255);
     /* background-color: rgba(255, 255, 255, 0.7); */
     z-index: 9999;
   }
