--- a/src/app/pages/lotes-medicos/index/index.component.html
+++ b/src/app/pages/lotes-medicos/index/index.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header text-secondary border-0">
-              <h3 class="card-title text-center">Todos los insumos médicos</h3>
+              <h3 class="card-title text-center">Todos los lotes médicos de</h3>
               <div class="card-tools">
                 <a href="#" class="btn btn-tool btn-sm">
                   <i class="fas fa-download"></i>
@@ -16,11 +16,11 @@
                             <div class="input-group-prepend">
                               <div class="input-group-text"><i class="fas fa-search"></i></div>
                             </div>
-                            <input [(ngModel)]="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del insumo" (keyup)="buscarInsumo()">
+                            <input [(ngModel)]="search" class="form-control form-control-sm" placeholder="Ingrese el lote" (keyup)="buscarLote()">
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
-                        <a class="btn btn-sm btn-pink btn-block  my-2" routerLink=""><i class="fas fa-plus"></i> Agregar insumo</a>
+                        <a class="btn btn-sm btn-pink btn-block  my-2" routerLink=""><i class="fas fa-plus"></i> Agregar lote</a>
                     </div>
                 </div>   
             </div>
@@ -28,37 +28,28 @@
               <table class="table table-striped table-valign-middle">
                 <thead>
                 <tr>
-                    <th></th>
-                    <th>Insumos</th>
-                    <th class="text-center">Stock en cajas</th>
-                    <th class="text-center">Stock en piezas</th>
+                    <th>Lote</th>
+                    <th class="text-center">Fecha de caducidad</th>
+                    <th class="text-center">Piezas disponibles</th>
                     <th></th>
                     <th></th>
                     <th></th>
                 </tr>
                 </thead>
-                <tbody *ngIf="insumos.length > 0; else noInsumos">
-                    <tr *ngFor="let insumo of insumos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
+                <tbody *ngIf="lotes.length > 0; else nolotes">
+                    <tr *ngFor="let lote of lotes | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                         <td>
-                            <i class="fas fa-circle" [ngClass]="{
-                                'text-success': insumo.lotes.length > 10,
-                                'text-warning': insumo.lotes.length <= 10 && insumo.lotes.length > 5,
-                                'text-danger': insumo.lotes.length <= 5,
-                                'text-black': insumo.lotes.length === 0
-                            }"></i>
-                        </td>
-                        <td>
-                            {{ insumo.nombre }}
+                            {{ lote.lote }}
                         </td>
                         <td class="text-center">
-                            {{ insumo?.lotes?.length || 0 }}
+                            {{ lote.fechaCaducidad }}
                         </td>
                         <td class="text-center">
-                            {{ obtenerSumatoriaPiezasDisponibles(insumo.lotes) }}
+                            {{ lote.piezasDisponibles }}/{{ insumo?.piezasPorLote }}
                         </td>
                         <td width="10px">
-                            <button href="#" class="btn btn-sm btn-secondary" (click)="showInsumoMedico(insumo.id)">
-                                <i class="fas fa-list"></i>
+                            <button href="#" class="btn btn-sm btn-secondary">
+                                <i class="fas fa-eye"></i>
                             </button>
                         </td>
                         <td width="10px">
@@ -80,9 +71,9 @@
                     <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
                 </div>
             </div>
-            <ng-template #noInsumos>
+            <ng-template #nolotes>
                 <tr>
-                    <td colspan="5" class="text-center">Sin insumos médicos</td>
+                    <td colspan="5" class="text-center">Sin lotes</td>
                 </tr>
             </ng-template>
         </div>
